# mtags

./: .gitignore  INSTALL-UBUNTU.md  Makefile  README  README.md  atomicparsley.patch  build-deps.sh  install-openembedded.sh  install-ubuntu.sh
id3/: CMakeLists.txt  Makefile  id3_main.cpp  id3tagjson.cpp  id3tagjson.h
id3/include/: id3_jdefs.h  id3stringdefs.h
img/: CMakeLists.txt  Makefile  img_jdefs.h  img_main.cpp  imgtagjson.cpp  imgtagjson.h
img/include/: imgtagjson.h
lib/AtomicParsley/: AP_AtomExtracts.cpp  AP_AtomExtracts.h  AP_NSFile_utils.h  AP_NSFile_utils.mm  AP_NSImage.h  AP_NSImage.mm  AP_commons.cpp  AP_iconv.cpp  APar_uuid.cpp  AtomicParsley.cpp  AtomicParsley.h  AtomicParsley_genres.cpp  Makefile  Ubuild  build  main.cpp
lib/exiv2/: configure
lib/exiv2/doc/templates/: Makefile
lib/exiv2/po/: de.gmo  es.gmo  fi.gmo  fr.gmo  pl.gmo  ru.gmo  sk.gmo
lib/exiv2/samples/: iotest.cpp
lib/exiv2/src/: Makefile  actions.cpp  actions.hpp  basicio.cpp  bmpimage.cpp  canonmn.cpp  canonmn_int.hpp  convert.cpp  cr2image.cpp  crwimage.cpp  crwimage_int.hpp  datasets.cpp  doxygen.hpp.in  easyaccess.cpp  easyaccess.hpp  error.cpp  error.hpp  exif.cpp  exif.hpp  exiv2.cpp  exiv2.hpp  exiv2app.hpp  fujimn.cpp  fujimn_int.hpp  futils.cpp  gifimage.cpp  image.cpp  iptc.cpp  jp2image.cpp  jpgimage.cpp  makernote.cpp  makernote_int.hpp  metadatum.cpp  minoltamn.cpp  minoltamn_int.hpp  mrwimage.cpp  nikonmn.cpp  nikonmn_int.hpp  olympusmn.cpp  olympusmn_int.hpp  (+44 more)
lib/jhead/: jpgfile.c
lib/libjson/: JSONOptions.h
lib/libjson/Getting Started/Library Interface/scripts/: ._shCore.js
lib/libjson/Source/: JSONWorker.cpp
lib/mhash/: Makefile  config.status  libtool  mha.cfg
lib/mhash/doc/: Makefile
lib/mhash/include/: Makefile
lib/mhash/include/mutils/: mhash_config.h
lib/mhash/lib/: Makefile
lib/mhash/lib/.deps/: adler32.Plo  crc32.Plo  gosthash.Plo  haval.Plo  keygen.Plo  keygen_asis.Plo  keygen_hex.Plo  keygen_mcrypt.Plo  keygen_s2k.Plo  md2.Plo  md4.Plo  md5.Plo  mhash.Plo  ripemd.Plo  sha1.Plo  sha256_sha224.Plo  sha512_sha384.Plo  snefru.Plo  stdfns.Plo  tiger.Plo  tiger_sboxes.Plo  whirlpool.Plo
lib/mhash/src/: Makefile
lib/mhash/src/.deps/: driver.Po  frag_test.Po  hmac_test.Po  keygen_test.Po  mhash_save_restore_test.Po
lib/taglib/: Makefile  config.h  config.status  libtool  taglib-config  taglib.pc
lib/taglib/autom4te.cache/: output.0  requests  traces.0
lib/taglib/bindings/: Makefile
lib/taglib/bindings/c/: Makefile  taglib_c.pc
lib/taglib/bindings/c/.deps/: tag_c.Plo
lib/taglib/examples/: Makefile  tagreader
lib/taglib/examples/.deps/: tagreader.Po  tagreader_c.Po
lib/taglib/taglib/: Makefile  stamp-h2
lib/taglib/taglib/.deps/: audioproperties.Plo  fileref.Plo  tag.Plo  tagunion.Plo
lib/taglib/taglib/ape/: Makefile
lib/taglib/taglib/ape/.deps/: apefooter.Plo  apeitem.Plo  apetag.Plo
lib/taglib/taglib/asf/: Makefile
lib/taglib/taglib/asf/.deps/: asfattribute.Plo  asffile.Plo  asfproperties.Plo  asftag.Plo
lib/taglib/taglib/flac/: Makefile
lib/taglib/taglib/flac/.deps/: flacfile.Plo  flacproperties.Plo
lib/taglib/taglib/mp4/: Makefile
lib/taglib/taglib/mp4/.deps/: mp4atom.Plo  mp4coverart.Plo  mp4file.Plo  mp4item.Plo  mp4properties.Plo  mp4tag.Plo
lib/taglib/taglib/mpc/: Makefile
lib/taglib/taglib/mpc/.deps/: mpcfile.Plo  mpcproperties.Plo
lib/taglib/taglib/mpeg/: Makefile
lib/taglib/taglib/mpeg/.deps/: mpegfile.Plo  mpegheader.Plo  mpegproperties.Plo  xingheader.Plo
lib/taglib/taglib/mpeg/id3v1/: Makefile
lib/taglib/taglib/mpeg/id3v2/: Makefile
lib/taglib/taglib/ogg/: Makefile
lib/taglib/taglib/ogg/.deps/: oggfile.Plo  oggpage.Plo  oggpageheader.Plo  xiphcomment.Plo
lib/taglib/taglib/ogg/flac/: Makefile
lib/taglib/taglib/ogg/speex/: Makefile
lib/taglib/taglib/ogg/vorbis/: Makefile
lib/taglib/taglib/riff/: Makefile
lib/taglib/taglib/riff/.deps/: rifffile.Plo
lib/taglib/taglib/riff/aiff/: Makefile
lib/taglib/taglib/riff/wav/: Makefile
lib/taglib/taglib/toolkit/: Makefile
lib/taglib/taglib/toolkit/.deps/: tbytevector.Plo  tbytevectorlist.Plo  tdebug.Plo  tfile.Plo  tstring.Plo  tstringlist.Plo  unicode.Plo
lib/taglib/taglib/trueaudio/: Makefile
lib/taglib/taglib/trueaudio/.deps/: trueaudiofile.Plo  trueaudioproperties.Plo
lib/taglib/taglib/wavpack/: Makefile
lib/taglib/tests/: Makefile
linux-x86-bins/: id3tags  imgtags  m4atags  pdftags
m4a/: CMakeLists.txt  Makefile  m4a_json.cpp  m4a_json.h  m4atags.cpp
m4a/include/: apar_glob.h
pdf/: CMakeLists.txt  Makefile  pdf_jdefs.h  pdf_main.cpp  pdftagjson.cpp  pdftagjson.h
(+32 files in other folders)
